# ropod_tue_2_bringup

./: CMakeLists.txt  package.xml  setup.bash
launch/: start.launch
parameters/hardware/: hokuyo_laser_back.yaml  hokuyo_laser_ip_parameters.yaml  hokuyo_laser_usb_parameters.yaml  laser_parameters.yaml  static_tf.launch
parameters/tools/: rviz_config.rviz
src/: laserBack_NoiseReduction.cpp  ropod_mobidik_tf_broadcaster.cpp  ropod_mobidik_tf_broadcaster_only_ropod.cpp  ropod_mobidik_tf_broadcaster_simulator.cpp  ropod_tf_broadcaster_simulator.cpp
