<?xml version="1.0"?>
<package>
  <name>ropod_tue_2_bringup</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_common</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>  
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

</package>
